data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4164.wast
;; 3. **Test Description**:    Incorrect Operand Stack in Loop:    - Constraint: Ensure operand stack conformity within `call_indirect` inside a loop.    - Test Behavior: Execute a loop repeatedly calling an indirect function where insufficient operands lead to an error, preventing infinite looping.

(assert_invalid
  (module
    (func $f (param i32))
    (type $sig (func (param i32)))
    (table funcref (elem $f))
    (func $loop-call
      (loop
        (call_indirect (type $sig))  ;; Missing required operand
        (br 0)
      )
    )
  )
  "type mismatch"
)